--- a/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/MeiTuTieTie.WindowsPhone.csproj
+++ b/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/MeiTuTieTie.WindowsPhone.csproj
@@ -81,6 +81,7 @@
   </PropertyGroup>
   <ItemGroup>
     <!-- A reference to the entire .Net Framework and Windows SDK are automatically included -->
+    <Folder Include="Utils\" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controls\SpriteControl.xaml.cs">
@@ -94,7 +95,6 @@
       <DependentUpon>OperationPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Utils\ImageHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
