--- a/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.Windows/MeiTuTieTie.Windows.csproj
+++ b/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.Windows/MeiTuTieTie.Windows.csproj
@@ -109,6 +109,9 @@
     <Compile Include="Pages\HomePage.xaml.cs">
       <DependentUpon>HomePage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Pages\OperationPage.xaml.cs">
+      <DependentUpon>OperationPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -125,6 +128,10 @@
   </ItemGroup>
   <ItemGroup>
     <Page Include="Pages\HomePage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Pages\OperationPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
