--- a/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/MeiTuTieTie.WindowsPhone.csproj
+++ b/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/MeiTuTieTie.WindowsPhone.csproj
@@ -124,6 +124,9 @@
     <Content Include="Assets\StoreLogo.scale-240.png" />
     <Content Include="Assets\Images\Rotate.png" />
     <Content Include="Assets\TestImages\TestImage001.jpg" />
+    <Content Include="Assets\TripleSwitch\TripleSwitchHide.png" />
+    <Content Include="Assets\TripleSwitch\TripleSwitchShow.png" />
+    <Content Include="Assets\TripleSwitch\TripleSwitchShowDisabled.png" />
     <Content Include="Assets\WideLogo.scale-240.png" />
   </ItemGroup>
   <ItemGroup>
