--- a/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/MeiTuTieTie.WindowsPhone.csproj
+++ b/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/MeiTuTieTie.WindowsPhone.csproj
@@ -85,9 +85,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controls\SpriteControl.cs" />
-    <Compile Include="Controls\TripleSwitch.xaml.cs">
-      <DependentUpon>TripleSwitch.xaml</DependentUpon>
-    </Compile>
     <Compile Include="Pages\MyThemeDetailPage.xaml.cs">
       <DependentUpon>MyThemeDetailPage.xaml</DependentUpon>
     </Compile>
@@ -124,16 +121,12 @@
     <Content Include="Assets\StoreLogo.scale-240.png" />
     <Content Include="Assets\Images\Rotate.png" />
     <Content Include="Assets\TestImages\TestImage001.jpg" />
-    <Content Include="Assets\TripleSwitch\TripleSwitchHide.png" />
-    <Content Include="Assets\TripleSwitch\TripleSwitchShow.png" />
-    <Content Include="Assets\TripleSwitch\TripleSwitchShowDisabled.png" />
+    <Content Include="Assets\ImageSwitch\SwitchHide.png" />
+    <Content Include="Assets\ImageSwitch\SwitchShow.png" />
+    <Content Include="Assets\ImageSwitch\SwitchDisabledShow.png" />
     <Content Include="Assets\WideLogo.scale-240.png" />
   </ItemGroup>
   <ItemGroup>
-    <Page Include="Controls\TripleSwitch.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
     <Page Include="Pages\MyThemeDetailPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
