--- a/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/MeiTuTieTie.WindowsPhone.csproj
+++ b/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/MeiTuTieTie.WindowsPhone.csproj
@@ -165,6 +165,18 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Page>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Assets\Fonts\COOPBL.TTF" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Assets\Fonts\JOKERMAN.TTF" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Assets\Fonts\GIGI.TTF" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Assets\Fonts\SHOWG.TTF" />
+  </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '12.0' ">
     <VisualStudioVersion>12.0</VisualStudioVersion>
   </PropertyGroup>
