--- a/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/MeiTuTieTie.WindowsPhone.csproj
+++ b/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/MeiTuTieTie.WindowsPhone.csproj
@@ -164,6 +164,10 @@
       <Generator>MSBuild:Compile</Generator>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Page>
+    <Page Include="Style\JumpListStyle.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Assets\Fonts\SHOWG.TTF" />
