--- a/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/MeiTuTieTie.WindowsPhone.csproj
+++ b/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/MeiTuTieTie.WindowsPhone.csproj
@@ -85,6 +85,7 @@
     <Folder Include="Converters\" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Pages\IFileOpenPickerPageBase.cs" />
     <Compile Include="Pages\PhotoEditPage.xaml.cs">
       <DependentUpon>PhotoEditPage.xaml</DependentUpon>
     </Compile>
