--- a/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/MeiTuTieTie.WindowsPhone.csproj
+++ b/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/MeiTuTieTie.WindowsPhone.csproj
@@ -127,6 +127,14 @@
   <ItemGroup>
     <Content Include="Assets\ImageSwitch\SwitchKnob.png" />
     <Content Include="Assets\Images\Remove.png" />
+    <Content Include="Assets\Images\Sprite\ShadowB.png" />
+    <Content Include="Assets\Images\Sprite\ShadowL.png" />
+    <Content Include="Assets\Images\Sprite\ShadowLB.png" />
+    <Content Include="Assets\Images\Sprite\ShadowLT.png" />
+    <Content Include="Assets\Images\Sprite\ShadowR.png" />
+    <Content Include="Assets\Images\Sprite\ShadowRB.png" />
+    <Content Include="Assets\Images\Sprite\ShadowRT.png" />
+    <Content Include="Assets\Images\Sprite\ShadowT.png" />
     <Content Include="Assets\Logo.scale-240.png" />
     <Content Include="Assets\materials.xml" />
     <Content Include="Assets\SmallLogo.scale-240.png" />
