--- a/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/MeiTuTieTie.WindowsPhone.csproj
+++ b/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/MeiTuTieTie.WindowsPhone.csproj
@@ -126,6 +126,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Assets\ImageSwitch\SwitchKnob.png" />
+    <Content Include="Assets\Images\CheckMark.png" />
     <Content Include="Assets\Images\Remove.png" />
     <Content Include="Assets\Images\Sprite\ShadowB.png" />
     <Content Include="Assets\Images\Sprite\ShadowL.png" />
