--- a/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/MeiTuTieTie.WindowsPhone.csproj
+++ b/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/MeiTuTieTie.WindowsPhone.csproj
@@ -113,10 +113,10 @@
     <Compile Include="Pages\MyThemeListPage.xaml.cs">
       <DependentUpon>MyThemeListPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Pages\TestPage2.xaml.cs">
+    <Compile Include="Pages\TestPages\TestPage2.xaml.cs">
       <DependentUpon>TestPage2.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Pages\TestPage1.xaml.cs">
+    <Compile Include="Pages\TestPages\TestPage1.xaml.cs">
       <DependentUpon>TestPage1.xaml</DependentUpon>
     </Compile>
     <Compile Include="Pages\WidgetPage.xaml.cs">
@@ -144,9 +144,14 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Assets\ImageSwitch\SwitchKnob.png" />
-    <Content Include="Assets\refSettings.png" />
     <Content Include="Assets\Images\CheckMark.png" />
+    <Content Include="Assets\Images\HomePageBackground.png" />
+    <Content Include="Assets\Images\HomePageDailyAD.png" />
+    <Content Include="Assets\Images\HomePageHeader.png" />
+    <Content Include="Assets\Images\HomePageMultiPhoto.png" />
+    <Content Include="Assets\Images\HomePageSettings.png" />
     <Content Include="Assets\Images\HomePageSettingsButtonBase.png" />
+    <Content Include="Assets\Images\HomePageSinglePhoto.png" />
     <Content Include="Assets\Images\Remove.png" />
     <Content Include="Assets\Images\Sprite\ShadowB.png" />
     <Content Include="Assets\Images\Sprite\ShadowL.png" />
@@ -156,12 +161,6 @@
     <Content Include="Assets\Images\Sprite\ShadowRB.png" />
     <Content Include="Assets\Images\Sprite\ShadowRT.png" />
     <Content Include="Assets\Images\Sprite\ShadowT.png" />
-    <Content Include="Assets\Images\HomePageHeader.png" />
-    <Content Include="Assets\Images\HomePageBackground.png" />
-    <Content Include="Assets\Images\HomePageSinglePhoto.png" />
-    <Content Include="Assets\Images\HomePageMultiPhoto.png" />
-    <Content Include="Assets\Images\HomePageDailyAD.png" />
-    <Content Include="Assets\Images\HomePageSettings.png" />
     <Content Include="Assets\Logo.scale-240.png" />
     <Content Include="Assets\materials.xml" />
     <Content Include="Assets\SmallLogo.scale-240.png" />
@@ -212,11 +211,11 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="Pages\TestPage2.xaml">
+    <Page Include="Pages\TestPages\TestPage2.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="Pages\TestPage1.xaml">
+    <Page Include="Pages\TestPages\TestPage1.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
