--- a/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/MeiTuTieTie.WindowsPhone.csproj
+++ b/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/MeiTuTieTie.WindowsPhone.csproj
@@ -163,8 +163,21 @@
     <Content Include="Assets\Images\HomePageSettingsButtonBase.png" />
     <Content Include="Assets\Images\HomePageSinglePhoto.png" />
     <Content Include="Assets\Images\LayerFuncOn.png" />
+    <Content Include="Assets\Images\Logo\Logo120.scale-100.png" />
+    <Content Include="Assets\Images\Logo\Logo120.scale-140.png" />
+    <Content Include="Assets\Images\Logo\Logo120.scale-240.png" />
+    <Content Include="Assets\Images\Logo\Logo150.scale-100.png" />
+    <Content Include="Assets\Images\Logo\Logo150.scale-140.png" />
+    <Content Include="Assets\Images\Logo\Logo150.scale-240.png" />
+    <Content Include="Assets\Images\Logo\Logo58.scale-100.png" />
+    <Content Include="Assets\Images\Logo\Logo58.scale-140.png" />
+    <Content Include="Assets\Images\Logo\Logo58.scale-240.png" />
+    <Content Include="Assets\Images\Logo\Logo71.scale-100.png" />
+    <Content Include="Assets\Images\Logo\Logo71.scale-140.png" />
+    <Content Include="Assets\Images\Logo\Logo71.scale-240.png" />
     <Content Include="Assets\Images\Remove.png" />
     <Content Include="Assets\Images\SingleModeBackground.png" />
+    <Content Include="Assets\Images\SNS\SinaWeibo.png" />
     <Content Include="Assets\Images\Sprite\ShadowB.png" />
     <Content Include="Assets\Images\Sprite\ShadowL.png" />
     <Content Include="Assets\Images\Sprite\ShadowLB.png" />
@@ -179,8 +192,14 @@
     <Content Include="Assets\Images\LayerDelete.png" />
     <Content Include="Assets\Images\LayerLocked.png" />
     <Content Include="Assets\Images\LayerUnlocked.png" />
+    <Content Include="Assets\Images\SaveSuccess.png" />
+    <Content Include="Assets\Images\MeiTu.png" />
+    <Content Include="Assets\Images\MeiYan.png" />
     <Content Include="Assets\Logo.scale-240.png" />
+    <Content Include="Assets\Logo\Logo71.scale-240.png" />
     <Content Include="Assets\materials.xml" />
+    <Content Include="Assets\SmallLogo.scale-100.png" />
+    <Content Include="Assets\SmallLogo.scale-140.png" />
     <Content Include="Assets\SmallLogo.scale-240.png" />
     <Content Include="Assets\SplashScreen.scale-240.png" />
     <Content Include="Assets\Square71x71Logo.scale-240.png" />
