--- a/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/MeiTuTieTie.WindowsPhone.csproj
+++ b/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/MeiTuTieTie.WindowsPhone.csproj
@@ -110,12 +110,6 @@
     <Compile Include="Pages\MyThemeListPage.xaml.cs">
       <DependentUpon>MyThemeListPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Pages\TestPages\TestPage2.xaml.cs">
-      <DependentUpon>TestPage2.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Pages\TestPages\TestPage1.xaml.cs">
-      <DependentUpon>TestPage1.xaml</DependentUpon>
-    </Compile>
     <Compile Include="Pages\WidgetPage.xaml.cs">
       <DependentUpon>WidgetPage.xaml</DependentUpon>
     </Compile>
@@ -209,6 +203,50 @@
     <Content Include="Assets\ImageSwitch\SwitchHide.png" />
     <Content Include="Assets\ImageSwitch\SwitchShow.png" />
     <Content Include="Assets\ImageSwitch\SwitchDisabledShow.png" />
+    <Content Include="theme\0\beijing_00.jpg" />
+    <Content Include="theme\0\beijing_01.jpg" />
+    <Content Include="theme\0\beijing_02.jpg" />
+    <Content Include="theme\0\biankuang_01.png" />
+    <Content Include="theme\0\biankuang_02.png" />
+    <Content Include="theme\0\biankuang_03.png" />
+    <Content Include="theme\0\gaoxiaobiaoqing_01.png" />
+    <Content Include="theme\0\gaoxiaobiaoqing_02.png" />
+    <Content Include="theme\0\gaoxiaobiaoqing_03.png" />
+    <Content Include="theme\0\katongxingxiang_01.png" />
+    <Content Include="theme\0\katongxingxiang_02.png" />
+    <Content Include="theme\0\katongxingxiang_03.png" />
+    <Content Include="theme\0\keai_01.png" />
+    <Content Include="theme\0\keai_02.png" />
+    <Content Include="theme\0\keai_03.png" />
+    <Content Include="theme\0\material_data.txt" />
+    <Content Include="theme\0\thumbnail_beijing_00.png" />
+    <Content Include="theme\0\thumbnail_beijing_01.png" />
+    <Content Include="theme\0\thumbnail_beijing_02.png" />
+    <Content Include="theme\0\thumbnail_biankuang_01.png" />
+    <Content Include="theme\0\thumbnail_biankuang_02.png" />
+    <Content Include="theme\0\thumbnail_biankuang_03.png" />
+    <Content Include="theme\0\thumbnail_gaoxiaobiaoqing_01.png" />
+    <Content Include="theme\0\thumbnail_gaoxiaobiaoqing_02.png" />
+    <Content Include="theme\0\thumbnail_gaoxiaobiaoqing_03.png" />
+    <Content Include="theme\0\thumbnail_katongxingxiang_01.png" />
+    <Content Include="theme\0\thumbnail_katongxingxiang_02.png" />
+    <Content Include="theme\0\thumbnail_katongxingxiang_03.png" />
+    <Content Include="theme\0\thumbnail_keai_01.png" />
+    <Content Include="theme\0\thumbnail_keai_02.png" />
+    <Content Include="theme\0\thumbnail_keai_03.png" />
+    <Content Include="theme\0\thumbnail_wenzi_01.png" />
+    <Content Include="theme\0\thumbnail_wenzi_02.png" />
+    <Content Include="theme\0\thumbnail_wenzi_03.png" />
+    <Content Include="theme\0\thumbnail_zhedang_01.png" />
+    <Content Include="theme\0\thumbnail_zhedang_02.png" />
+    <Content Include="theme\0\thumbnail_zhedang_03.png" />
+    <Content Include="theme\0\wenzi_01.png" />
+    <Content Include="theme\0\wenzi_02.png" />
+    <Content Include="theme\0\wenzi_03.png" />
+    <Content Include="theme\0\zhedang_01.png" />
+    <Content Include="theme\0\zhedang_02.png" />
+    <Content Include="theme\0\zhedang_03.png" />
+    <Content Include="theme\my_theme_data.txt" />
     <Content Include="Assets\WideLogo.scale-240.png" />
   </ItemGroup>
   <ItemGroup>
@@ -243,14 +281,6 @@
     <Page Include="Pages\MyThemeListPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
-    </Page>
-    <Page Include="Pages\TestPages\TestPage2.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="Pages\TestPages\TestPage1.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Pages\WidgetPage.xaml">
       <Generator>MSBuild:Compile</Generator>
