--- a/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/MeiTuTieTie.WindowsPhone.csproj
+++ b/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/MeiTuTieTie.WindowsPhone.csproj
@@ -134,6 +134,7 @@
     </AppxManifest>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\Audio\MaterialSFX.mp3" />
     <Content Include="Assets\Images\AboutLogo.png" />
     <Content Include="Assets\ImageSwitch\SwitchKnob.png" />
     <Content Include="Assets\Images\AppBar\AppBarAccept.png" />
@@ -170,7 +171,6 @@
     <Content Include="Assets\Images\Logo\Logo71.scale-100.png" />
     <Content Include="Assets\Images\Logo\Logo71.scale-140.png" />
     <Content Include="Assets\Images\Logo\Logo71.scale-240.png" />
-    <Content Include="Assets\Images\Remove.png" />
     <Content Include="Assets\Images\SingleModeBackground.png" />
     <Content Include="Assets\Images\SNS\SinaWeibo.png" />
     <Content Include="Assets\Images\Sprite\ShadowB.png" />
@@ -190,6 +190,8 @@
     <Content Include="Assets\Images\SaveSuccess.png" />
     <Content Include="Assets\Images\MeiTu.png" />
     <Content Include="Assets\Images\MeiYan.png" />
+    <Content Include="Assets\Images\Remove.png" />
+    <Content Include="Assets\Images\Rotate.png" />
     <Content Include="Assets\Logo.scale-240.png" />
     <Content Include="Assets\Logo\Logo71.scale-240.png" />
     <Content Include="Assets\materials.xml" />
@@ -199,7 +201,6 @@
     <Content Include="Assets\SplashScreen.scale-240.png" />
     <Content Include="Assets\Square71x71Logo.scale-240.png" />
     <Content Include="Assets\StoreLogo.scale-240.png" />
-    <Content Include="Assets\Images\Rotate.png" />
     <Content Include="Assets\TestImages\TestImage001.jpg" />
     <Content Include="Assets\ImageSwitch\SwitchHide.png" />
     <Content Include="Assets\ImageSwitch\SwitchShow.png" />
