--- a/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/MeiTuTieTie.WindowsPhone.csproj
+++ b/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/MeiTuTieTie.WindowsPhone.csproj
@@ -179,6 +179,9 @@
     <Content Include="Assets\Images\Logo\Logo71.scale-100.png" />
     <Content Include="Assets\Images\Logo\Logo71.scale-140.png" />
     <Content Include="Assets\Images\Logo\Logo71.scale-240.png" />
+    <Content Include="Assets\Images\Logo\SplashScreen.scale-100.jpg" />
+    <Content Include="Assets\Images\Logo\SplashScreen.scale-140.jpg" />
+    <Content Include="Assets\Images\Logo\SplashScreen.scale-240.jpg" />
     <Content Include="Assets\Images\SNS\SinaWeibo.png" />
     <Content Include="Assets\Images\Sprite\ShadowB.png" />
     <Content Include="Assets\Images\Sprite\ShadowL.png" />
@@ -199,15 +202,10 @@
     <Content Include="Assets\Images\MeiYan.png" />
     <Content Include="Assets\Images\Remove.png" />
     <Content Include="Assets\Images\Rotate.png" />
-    <Content Include="Assets\Logo.scale-240.png" />
-    <Content Include="Assets\Logo\Logo71.scale-240.png" />
     <Content Include="Assets\materials.xml" />
     <Content Include="Assets\SmallLogo.scale-100.png" />
     <Content Include="Assets\SmallLogo.scale-140.png" />
     <Content Include="Assets\SmallLogo.scale-240.png" />
-    <Content Include="Assets\SplashScreen.scale-240.png" />
-    <Content Include="Assets\Square71x71Logo.scale-240.png" />
-    <Content Include="Assets\StoreLogo.scale-240.png" />
     <Content Include="Assets\TestImages\TestImage001.jpg" />
     <Content Include="Assets\ImageSwitch\SwitchHide.png" />
     <Content Include="Assets\ImageSwitch\SwitchShow.png" />
@@ -256,7 +254,6 @@
     <Content Include="theme\0\zhedang_02.png" />
     <Content Include="theme\0\zhedang_03.png" />
     <Content Include="theme\my_theme_data.txt" />
-    <Content Include="Assets\WideLogo.scale-240.png" />
   </ItemGroup>
   <ItemGroup>
     <Page Include="Pages\AboutPage.xaml">
