--- a/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/MeiTuTieTie.WindowsPhone.csproj
+++ b/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/MeiTuTieTie.WindowsPhone.csproj
@@ -184,21 +184,21 @@
     <Content Include="Assets\Images\HomePageSettingsButtonBase.png" />
     <Content Include="Assets\Images\HomePageSinglePhoto.png" />
     <Content Include="Assets\Images\LayerFuncOn.png" />
-    <Content Include="Assets\Images\Logo\Logo120.scale-100.png" />
-    <Content Include="Assets\Images\Logo\Logo120.scale-140.png" />
-    <Content Include="Assets\Images\Logo\Logo120.scale-240.png" />
     <Content Include="Assets\Images\Logo\Logo150.scale-100.png" />
     <Content Include="Assets\Images\Logo\Logo150.scale-140.png" />
     <Content Include="Assets\Images\Logo\Logo150.scale-240.png" />
-    <Content Include="Assets\Images\Logo\Logo58.scale-100.png" />
-    <Content Include="Assets\Images\Logo\Logo58.scale-140.png" />
-    <Content Include="Assets\Images\Logo\Logo58.scale-240.png" />
+    <Content Include="Assets\Images\Logo\Logo44.scale-100.png" />
+    <Content Include="Assets\Images\Logo\Logo44.scale-140.png" />
+    <Content Include="Assets\Images\Logo\Logo44.scale-240.png" />
     <Content Include="Assets\Images\Logo\Logo71.scale-100.png" />
     <Content Include="Assets\Images\Logo\Logo71.scale-140.png" />
     <Content Include="Assets\Images\Logo\Logo71.scale-240.png" />
     <Content Include="Assets\Images\Logo\SplashScreen.scale-100.jpg" />
     <Content Include="Assets\Images\Logo\SplashScreen.scale-140.jpg" />
     <Content Include="Assets\Images\Logo\SplashScreen.scale-240.jpg" />
+    <Content Include="Assets\Images\Logo\StoreLogo.scale-100.png" />
+    <Content Include="Assets\Images\Logo\StoreLogo.scale-140.png" />
+    <Content Include="Assets\Images\Logo\StoreLogo.scale-240.png" />
     <Content Include="Assets\Images\SaveImage.png" />
     <Content Include="Assets\Images\Select.png" />
     <Content Include="Assets\Images\SNS\SinaWeibo.png" />
@@ -226,11 +226,6 @@
     <Content Include="Assets\Images\Welcome\Welcome3.jpg" />
     <Content Include="Assets\Images\Welcome\Welcome4.jpg" />
     <Content Include="Assets\Images\Welcome\WelcomeGoButton.png" />
-    <Content Include="Assets\materials.xml" />
-    <Content Include="Assets\SmallLogo.scale-100.png" />
-    <Content Include="Assets\SmallLogo.scale-140.png" />
-    <Content Include="Assets\SmallLogo.scale-240.png" />
-    <Content Include="Assets\TestImages\TestImage001.jpg" />
     <Content Include="theme\0\beijing_00.jpg" />
     <Content Include="theme\0\beijing_01.jpg" />
     <Content Include="theme\0\beijing_02.jpg" />
