--- a/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.Windows/MeiTuTieTie.Windows.csproj
+++ b/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.Windows/MeiTuTieTie.Windows.csproj
@@ -103,9 +103,6 @@
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <!-- A reference to the entire .Net Framework and Windows SDK are automatically included -->
-  </ItemGroup>
-  <ItemGroup>
     <Compile Include="Pages\HomePage.xaml.cs">
       <DependentUpon>HomePage.xaml</DependentUpon>
     </Compile>
@@ -119,6 +116,7 @@
       <SubType>Designer</SubType>
     </AppxManifest>
     <None Include="MeiTuTieTie.Windows_TemporaryKey.pfx" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Assets\Logo.scale-100.png" />
@@ -135,6 +133,11 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="UmengAnalyticsUniversal">
+      <HintPath>..\..\packages\UmengAnalytics.2.0.2\lib\netcore451\UmengAnalyticsUniversal.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '12.0' ">
     <VisualStudioVersion>12.0</VisualStudioVersion>
